--- a/WhereToPlay/app/src/main/res/layout/packageitemview.xml
+++ b/WhereToPlay/app/src/main/res/layout/packageitemview.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="有效期"
+
         android:textColor="#ff999999"
         android:textSize="15dp" />
 
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_top"
-        android:text="·2017-12-12至2017-12-31"
+
         android:textColor="#ff333333"
         android:textSize="15dp" />
 
