--- a/WhereToPlay/app/src/main/res/layout/activity_pay_bill.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_pay_bill.xml
@@ -33,15 +33,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/padding_10"
-                    android:paddingLeft="@dimen/padding_20"
-                    android:paddingTop="@dimen/padding_15"
-                    android:text="@string/pay_way"
-                    android:textColor="@color/text_down_payment_and_way"
-                    android:textSize="@dimen/normal_textsize" />
 
                 <RelativeLayout
                     android:id="@+id/relativeLayout"
@@ -223,7 +214,10 @@
                         android:layout_width="@dimen/width_0"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:drawableLeft="@drawable/mine_icon"
                         android:text="@string/earnest"
+                        android:gravity="center_vertical"
+                        android:drawablePadding="8dp"
                         android:textColor="#333333"
                         android:textSize="@dimen/textsize_level2" />
 
@@ -263,7 +257,10 @@
                         android:layout_width="@dimen/width_0"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:drawableLeft="@drawable/mine_icon"
                         android:text="@string/discount_coupon"
+                        android:gravity="center_vertical"
+                        android:drawablePadding="8dp"
                         android:textColor="#333333"
                         android:textSize="@dimen/textsize_level2" />
 
@@ -272,7 +269,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#333333"
-                        android:textSize="@dimen/textsize_level3" />
+                        android:hint="选择可用的优惠券"
+                        android:textColorHint="#333333"
+                        android:textSize="@dimen/textsize_level2" />
 
                     <ImageView
                         android:id="@+id/iv_pay_bill_discount_coupon"
