--- a/WhereToPlay/app/src/main/res/layout/packageadapter.xml
+++ b/WhereToPlay/app/src/main/res/layout/packageadapter.xml
@@ -2,34 +2,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="12dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="12dp">
 
-    <TextView
-        android:id="@+id/tv_001"
-        android:textColor="#ff333333"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        tools:text="002" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_003"
-        android:textColor="#ff333333"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="12dp"
-        tools:text="002" />
+        <TextView
+            android:id="@+id/tv_001"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_weight="1"
+            android:textColor="#ff333333"
+            tools:text="002" />
 
-    <TextView
-        android:textColor="#ff333333"
-        android:id="@+id/tv_002"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:layout_toLeftOf="@id/tv_003"
-        tools:text="002" />
+        <TextView
+            android:id="@+id/tv_003"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:layout_weight="2"
+            android:textColor="#ff333333"
+            tools:text="002" />
 
+        <TextView
+            android:id="@+id/tv_002"
+            android:gravity="right"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#ff333333"
+            android:layout_marginRight="12dp"
+            tools:text="002" />
+    </LinearLayout>
 
 </RelativeLayout>
