--- a/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
@@ -200,6 +200,8 @@
                 <TextView
                     android:id="@+id/tv_storeName2"
                     android:layout_width="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
                     android:layout_marginLeft="12dp"
@@ -265,23 +267,35 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="12dp"
                     android:layout_weight="1"
+                    android:gravity="right"
+                    android:textColor="#ff333333"
+                    tools:text="2580元" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:gravity="right|center_vertical"
                     android:text="总价值" />
 
                 <TextView
                     android:id="@+id/tv_falseMoney1"
 
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+
                     android:layout_marginRight="12dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:gravity="right"
                     android:textColor="#ff333333"
                     tools:text="2580元" />
@@ -293,18 +307,29 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="12dp"
                     android:layout_weight="1"
+                    android:gravity="right"
+                    android:textColor="#ff333333"
+                    tools:text="2580元" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:gravity="right"
                     android:text="套餐价" />
 
                 <TextView
                     android:id="@+id/tv_realMoney1"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="12dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:gravity="right"
                     android:textColor="@color/text_red"
                     tools:text="2580元" />
