--- a/WhereToPlay/app/src/main/res/layout/packagefragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagefragment.xml
@@ -90,8 +90,6 @@
             android:orientation="vertical">
 
 
-
-
             <ImageView
                 android:id="@+id/iv"
                 android:layout_width="match_parent"
@@ -210,23 +208,29 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:gravity="right|center_vertical"
                     android:text="总价值" />
 
                 <TextView
                     android:id="@+id/tv_falseMoney1"
 
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+
                     android:layout_marginRight="12dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:gravity="right"
                     android:textColor="#ff333333"
                     tools:text="2580元" />
@@ -236,20 +240,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="1" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:gravity="right"
                     android:text="套餐价" />
 
                 <TextView
                     android:id="@+id/tv_realMoney1"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="12dp"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:gravity="right"
                     android:textColor="@color/text_red"
                     tools:text="2580元" />
