--- a/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
@@ -30,6 +30,7 @@
                 <ImageView
                     android:id="@+id/iv001"
                     android:layout_width="80dp"
+                    android:scaleType="fitXY"
                     android:layout_height="60dp"
                     android:layout_centerVertical="true" />
 
@@ -49,12 +50,14 @@
                     android:layout_alignBottom="@+id/iv001"
                     android:layout_alignTop="@+id/iv001"
                     android:layout_toLeftOf="@+id/iv"
+                    android:layout_marginLeft="8dp"
                     android:layout_toRightOf="@+id/iv001"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tv_storeName00"
                         android:layout_width="wrap_content"
+
                         android:layout_height="wrap_content"
                         android:textColor="#333333"
                         tools:text="1212" />
@@ -197,10 +200,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+
+                <ImageView
+                    android:id="@+id/iv_phone"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="30dp"
+                    android:src="@drawable/phone1" />
+
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="1dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_toLeftOf="@id/iv_phone"
+                    android:background="#ffe5e5e5" />
+
                 <TextView
                     android:id="@+id/tv_storeName2"
-                    android:layout_width="wrap_content"
-                    android:maxLines="1"
+                    android:layout_width="match_parent"
+
+                    android:layout_toLeftOf="@+id/view"
+
                     android:ellipsize="end"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
@@ -222,22 +247,7 @@
                     android:textSize="13dp"
                     tools:text="黄浦区淮海路东段嵩山路77号" />
 
-                <ImageView
-                    android:id="@+id/iv_phone"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="30dp"
-                    android:src="@drawable/phone1" />
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="30dp"
-                    android:layout_toLeftOf="@id/iv_phone"
-                    android:background="#ffe5e5e5" />
 
             </RelativeLayout>
 
