--- a/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <RelativeLayout
-
+        android:id="@+id/rl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp">
