--- a/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
@@ -377,6 +377,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp" />
+            <com.fanc.wheretoplay.view.PackageItemView
+                android:id="@+id/piv11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp" />
 
             <com.fanc.wheretoplay.view.PackageItemView
                 android:id="@+id/piv2"
