--- a/WhereToPlay/app/src/main/res/layout/packagedateadapter.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagedateadapter.xml
@@ -2,20 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp"
+    android:paddingTop="12sp">
 
     <TextView
         android:id="@+id/tvs"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/selector_boder"
-        android:padding="12dp"
+        android:layout_alignParentStart="true"
+
+        android:gravity="center"
+        android:padding="18dp"
         tools:text="1221212121212121" />
 
     <ImageView
         android:id="@+id/ivs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:src="@drawable/nextday" />
 
 </RelativeLayout>
