--- a/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <RelativeLayout
-        android:id="@+id/rl"
+                android:id="@+id/rl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp">
@@ -30,9 +30,9 @@
                 <ImageView
                     android:id="@+id/iv001"
                     android:layout_width="80dp"
-                    android:scaleType="fitXY"
                     android:layout_height="60dp"
-                    android:layout_centerVertical="true" />
+                    android:layout_centerVertical="true"
+                    android:scaleType="fitXY" />
 
 
                 <ImageView
@@ -49,8 +49,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/iv001"
                     android:layout_alignTop="@+id/iv001"
-                    android:layout_toLeftOf="@+id/iv"
                     android:layout_marginLeft="8dp"
+                    android:layout_toLeftOf="@+id/iv"
                     android:layout_toRightOf="@+id/iv001"
                     android:orientation="vertical">
 
@@ -215,8 +215,8 @@
                     android:layout_width="1dp"
                     android:layout_height="30dp"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="30dp"
                     android:layout_marginLeft="12dp"
+                    android:layout_marginRight="30dp"
                     android:layout_toLeftOf="@id/iv_phone"
                     android:background="#ffe5e5e5" />
 
@@ -224,12 +224,12 @@
                     android:id="@+id/tv_storeName2"
                     android:layout_width="match_parent"
 
-                    android:layout_toLeftOf="@+id/view"
-
-                    android:ellipsize="end"
                     android:layout_height="wrap_content"
+
                     android:layout_marginBottom="12dp"
                     android:layout_marginLeft="12dp"
+                    android:layout_toLeftOf="@+id/view"
+                    android:ellipsize="end"
                     android:textColor="#ff000000"
                     android:textSize="17dp"
                     tools:text="上海天地汇会所" />
@@ -248,7 +248,6 @@
                     tools:text="黄浦区淮海路东段嵩山路77号" />
 
 
-
             </RelativeLayout>
 
 
@@ -258,6 +257,7 @@
                 android:background="#ffe5e5e5" />
 
             <TextView
+                android:id="@+id/tv_000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
@@ -268,6 +268,40 @@
                 android:text="套餐详情"
                 android:textColor="#ff333333"
                 android:textSize="15dp" />
+
+            <LinearLayout
+                android:id="@+id/lll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv001"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    tools:text="01月05日" />
+
+                <TextView
+                    android:id="@+id/tv002"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="欢畅时长不足6小时按照6小时计算"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="@color/text_red"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/tv003"
+                    android:layout_marginBottom="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="小宝（）" />
+
+            </LinearLayout>
+
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycle"
@@ -377,6 +411,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp" />
+
             <com.fanc.wheretoplay.view.PackageItemView
                 android:id="@+id/piv11"
                 android:layout_width="match_parent"
